--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-led / optimized / DLL files
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
@@ -103,4 +103,3 @@ venv.bak/
 
 # mypy
 .mypy_cache/
-
