--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ before_install:
 script:
     - docker ps | grep api-gateway -q
     - docker ps | grep frontend -q
-    - python3 locust_test.py
+    - python3 locust_check.py
