--- a/api-gateway/gateway/Dockerfile
+++ b/api-gateway/gateway/Dockerfile
@@ -3,18 +3,18 @@
 FROM python:3.5-alpine
 
 # Create running directory
-RUN mkdir /api
+WORKDIR /api
 
 # Copy over application files
-COPY run.py /api/run.py
-COPY app /api/app
-COPY requirements.txt /api/requirements.txt
+COPY run.py ./run.py
+COPY app ./app
+COPY requirements.txt ./requirements.txt
 
 # Install pip requirements
 RUN pip3 install -r requirements.txt
 
 # Configure uWSGI
-COPY app.ini /app/app.ini
+COPY app.ini ./app.ini
 
 # Run the application on startup
 CMD uwsgi --ini app.ini
