Add GCC to gateway dockerfile
GCC is required to build uWSGI, and why would it be installed by default on
Alpine?  At least there's a package manager.

--- a/api-gateway/gateway/Dockerfile
+++ b/api-gateway/gateway/Dockerfile
@@ -10,6 +10,9 @@ COPY run.py ./run.py
 COPY app ./app
 COPY requirements.txt ./requirements.txt
 
+# Install GCC (it's required for uWSGI...)
+RUN apk add build-base
+
 # Install pip requirements
 RUN pip3 install -r requirements.txt
 
