Fix uWSGI compile errors on Alpine
The uWSGI pip package quitely depends on some compliation packages that aren't
installed by default on Alpine.  Good job, pip.  You're a great package
manager.  Almost as good as someone with a decent knowledge of linux and a
search engine.

--- a/api-gateway/gateway/Dockerfile
+++ b/api-gateway/gateway/Dockerfile
@@ -10,8 +10,8 @@ COPY run.py ./run.py
 COPY app ./app
 COPY requirements.txt ./requirements.txt
 
-# Install GCC (it's required for uWSGI...)
-RUN apk add build-base
+# Install packages required to build uWSGI
+RUN apk --update add build-base linux-headers
 
 # Install pip requirements
 RUN pip3 install -r requirements.txt
