Fix various configuration errors
The nginx configuration file was missing an events section, and other parts
that are required.  I initially excluded these because the example I was
copying from also excluded them...

Also, I tried to put a colon at the end of a function decorator in the flask
app.  Python did not like that one bit.

--- a/api-gateway/gateway-proxy/nginx.conf
+++ b/api-gateway/gateway-proxy/nginx.conf
@@ -1,6 +1,14 @@
+user nginx;
+worker_processes auto;
+pid /run/nginx.pid;
+
+events {
+    worker_connections 768;
+}
+
 http {
-    upstream api-gateway {
-        server api-gateway:9000;
+    upstream api-gate {
+        server api-gate:8000;
     }
 
     server {
@@ -8,7 +16,7 @@ http {
         server_name _;
 
         location / {
-            uwsgi_pass gateway:8000;
+            uwsgi_pass api-gate;
         }
     }
 }
