--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -14,6 +14,8 @@ services:
         image: front-proxy
         expose:
             - "8000"
+        ports:
+            - "80:8000"
         restart: always
         depends_on:
             - frontend
