--- a/api-gateway/gateway-proxy/nginx.conf
+++ b/api-gateway/gateway-proxy/nginx.conf
@@ -16,6 +16,7 @@ http {
         server_name _;
 
         location / {
+            include uwsgi_params;
             uwsgi_pass api-gate;
         }
     }
