Add user database to master composefile
The MySQL database for user information was added to the master composefile, so
now it will be created with the rest of the website.  Also, a test was added to
the travisfile to check if the database is up.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,13 @@ services:
         depends_on:
             - frontend
 
+    user-db:
+        build: user-database
+        image: user-db
+        expose:
+            - "3306"
+        restart: always
+
     api-gate:
         build: api-gateway/gateway
         image: api-gate
