--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ script:
     - docker ps | grep front-proxy -q
     - docker ps | grep api-gate -q
     - docker ps | grep proxy -q
+    - docker ps | grep user-db -q
 
     # Run load balance checks
     - python3 locust_check.py
