Implement /isAuthenticated. Modify return type of all endpoints to String because I use a JSON package to normalize the responses.

--- a/authenticate-server/build.gradle
+++ b/authenticate-server/build.gradle
@@ -30,6 +30,7 @@ bootJar {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile("org.springframework.ldap:spring-ldap-core")
+	compile("com.googlecode.json-simple:json-simple")
 	runtime('mysql:mysql-connector-java')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
