--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ MarkupSafe==1.0
 msgpack-python==0.5.4
 pyzmq==17.0.0
 requests==2.18.4
+selenium==3.11.0
 six==1.11.0
 urllib3==1.22
 Werkzeug==0.14.1
