Add selenium to travisfile
Now that the selenium script actually does something, we should add it to the
travisfile for travis to actually use it.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,6 @@ script:
 
     # Run load balance checks
     - python3 testing/locust_check.py
+
+    # Run browser functionality checks
+    - python3 testing/selenium-test.py
