Check PEP8 compliance on all python
A sweet oneliner was added to the travisfile that checks all python files for
PEP8 compliancy.  Rest In Peace our passing rate.  This takes care of the
requirement listed in issue #57.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ before_install:
     - docker-compose up -d
 
 script:
+    # Check code style
+    - pycodestyle $(find . -name "*.py")
+
     # Check if all the docker images are up
     - docker ps | grep frontend -q
     - docker ps | grep front-proxy -q
