Ignore E402 PEP8 errors
Flask throws E402 PEP8 errors on all of its __init__.py files because of
circular imports.  Let's ignore those so our travis builds actually pass at
some point!

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
 
 script:
     # Check code style
-    - pycodestyle $(find . -name "*.py")
+    - pycodestyle --ignore=E402 $(find . -name "*.py")
 
     # Check if all the docker images are up
     - docker ps | grep frontend -q
