--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Jinja2==2.10
 locust==0.8
 MarkupSafe==1.0
 msgpack-python==0.5.4
+pycodestyle==2.3.1
 pyzmq==17.0.0
 requests==2.18.4
 selenium==3.11.0
