Actually use the requirements file
You know that requirements file?  The one you've been maintaining for probably
100+ commits?  Yeah, you haven't been using it.  Good job.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ services:
 before_install:
     - curl https://bootstrap.pypa.io/get-pip.py > get-pip.py
     - sudo python3 get-pip.py
-    - sudo pip3 install locust
+    - sudo pip3 install -r requirements.txt
     - docker-compose up -d
 
 script:
