Remove the get-pip script
Turns out the git-pip script actually has a PEP8 error in it.  A+ work there,
guys!  Let's remove that so our travis builds pass (somewhat more).

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
     - curl https://bootstrap.pypa.io/get-pip.py > get-pip.py
     - sudo python3 get-pip.py
     - sudo pip3 install -r requirements.txt
+    - sudo rm -f get-pip.py
     - docker-compose up -d
 
 script:
