Install selenium webdrivers in Travis
For the selenium scripts to work, the webdrivers have to be installed.  Let's
do that.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
     - sudo python3 get-pip.py
     - sudo pip3 install -r requirements.txt
     - sudo rm -f get-pip.py
+    - sudo /bin/bash testing/get-webdrivers.sh
     - docker-compose up -d
 
 script:
