--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
     - sudo python3 get-pip.py
     - sudo pip3 install -r requirements.txt
     - sudo rm -f get-pip.py
-    - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 &
+    - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
     - sudo /bin/bash testing/get-webdrivers.sh
     - docker-compose up -d
 
