--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
     - docker
 
 before_install:
-    - authenticate-server/gradlew bootJar
+    - (cd authenticate-server; ./gradlew bootJar)
     - docker-compose build
 
 install:
