Properly run docker-compose in the background
It can be nice (sometimes) to have the docker-compose information listed for
you.  However, it can make the job log difficult and confusing to read.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
     - docker-compose build
 
 install:
-    - docker-compose up &
+    - docker-compose up -d
 
 before_script:
     - curl https://bootstrap.pypa.io/get-pip.py > get-pip.py
