--- a/api-gateway/gateway/requirements.txt
+++ b/api-gateway/gateway/requirements.txt
@@ -8,6 +8,8 @@ Jinja2==2.10
 MarkupSafe==1.0
 mysql-connector==2.1.6
 requests==2.18.4
+SQLAlchemy==1.2.6
 urllib3==1.22
 uWSGI==2.0.16
 Werkzeug==0.14.1
+https://dev.mysql.com/get/Downloads/Connector-Python/mysql-connector-python-2.1.7.tar.gz
