Change it back because it doesn't matter

--- a/frontend/proxy/nginx.conf
+++ b/frontend/proxy/nginx.conf
@@ -3,7 +3,7 @@ worker_processes auto;
 pid /run/nginx.pid;
 
 events {
-    worker_connections 1024;
+    worker_connections auto;
 }
 
 http {
@@ -16,7 +16,7 @@ http {
         server_name _;
 
         location ~* .(jpg|jpeg|png|gif|ico|css|js)$ {
-            expires 365d;
+            expires
         }
 
         location / {
