--- a/api-gateway/gateway-proxy/nginx.conf
+++ b/api-gateway/gateway-proxy/nginx.conf
@@ -3,7 +3,7 @@ worker_processes auto;
 pid /run/nginx.pid;
 
 events {
-    worker_connections 768;
+    worker_connections 1024;
 }
 
 http {
@@ -14,6 +14,10 @@ http {
     server {
         listen 80;
         server_name _;
+
+        location ~* .(jpg|jpeg|png|gif|ico|css|js)$ {
+            expires
+        }
 
         location / {
             include uwsgi_params;
