Fix syntax error
When you set an expiration date for caching, you have to actually set a date.

--- a/api-gateway/gateway-proxy/nginx.conf
+++ b/api-gateway/gateway-proxy/nginx.conf
@@ -16,7 +16,7 @@ http {
         server_name _;
 
         location ~* .(jpg|jpeg|png|gif|ico|css|js)$ {
-            expires
+            expires 1d;
         }
 
         location / {
