Automate kibana initialization; Implement elasticsearch client functions; Implement /addSkit; Update docs

--- a/skits-controller/Dockerfile
+++ b/skits-controller/Dockerfile
@@ -1,8 +1,11 @@
 FROM node:8.11.0
 
-COPY app/* /
+COPY app/* /app/
+COPY *.json /
+COPY import.sh /
 
 RUN npm install
+RUN chmod +x /import.sh
 
 EXPOSE 8080
 
