--- a/skits-controller/package.json
+++ b/skits-controller/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "sleep 20 && bash import.sh && node app/index.js",
+    "start": "bash import.sh && node app/index.js",
     "test": "node app/test.js"
   },
   "author": "dp",
