--- a/frontend/app/requirements.txt
+++ b/frontend/app/requirements.txt
@@ -3,5 +3,8 @@ Flask==0.12.2
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+mysql-connector==2.1.6
+mysql-connector-python==8.0.6
+SQLAlchemy==1.2.6
 uWSGI==2.0.16
 Werkzeug==0.14.1
