--- a/skits-elasticsearch/elasticsearch/Dockerfile
+++ b/skits-elasticsearch/elasticsearch/Dockerfile
@@ -1,3 +1,3 @@
-FROM docker pull docker.elastic.co/elasticsearch/elasticsearch-oss:6.2.3
+FROM docker.elastic.co/elasticsearch/elasticsearch-oss:6.2.3
 
 EXPOSE 9200
