--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,8 @@ services:
         image: kibana
         expose:
             - "5601"
+        ports:
+            - "5601:5601"
         restart: always
         depends_on:
             - elasticsearch
