--- a/follow-users/proxy/nginx.conf
+++ b/follow-users/proxy/nginx.conf
@@ -7,8 +7,8 @@ events {
 }
 
 http {
-    upstream frontend {
-        server frontend:8000;
+    upstream follow-users {
+        server follow-users:8000;
     }
 
     server {
@@ -17,7 +17,7 @@ http {
 
         location / {
             include uwsgi_params;
-            uwsgi_pass frontend;
+            uwsgi_pass follow-users;
         }
     }
 }
