--- a/settings/Dockerfile
+++ b/settings/Dockerfile
@@ -1,3 +1,7 @@
 FROM php:7-apache
 
+RUN docker-php-ext-install mysqli
+RUN docker-php-ext-enable mysqli
+
 COPY src/ /var/www/html/
+COPY img/ /var/www/html/
