Add the images into the correct directory
The settings server wasn't hosting the images in the right spot...

--- a/settings/Dockerfile
+++ b/settings/Dockerfile
@@ -3,5 +3,5 @@ FROM php:7-apache
 RUN docker-php-ext-install mysqli
 RUN docker-php-ext-enable mysqli
 
+COPY img/ /var/www/html/img/
 COPY src/ /var/www/html/
-COPY img/ /var/www/html/
