Fix Dockerfile for auth server

--- a/authenticate-server/Dockerfile
+++ b/authenticate-server/Dockerfile
@@ -1,7 +1,9 @@
 FROM openjdk:8
 
-COPY ./build/libs/skitter-auth-0.0.1.jar /
+COPY ./spring-app /spring-app/
+
+RUN cd /spring-app && ./gradlew bootJar
 
 EXPOSE 8080
 
-CMD java -jar /skitter-auth-0.0.1.jar
+CMD java -jar /spring-app/build/libs/skitter-auth-0.0.1.jar
